--- a/sites/all/themes/JBW/css/sidebar.css
+++ b/sites/all/themes/JBW/css/sidebar.css
@@ -26,6 +26,10 @@
 
 #scrollbarY  section .block-inner{
     /*padding: 5px;*/
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-top: 10px;
+    margin-bottom: 5px;
     
 }
 
