--- a/sites/all/themes/JBW/css/festival.css
+++ b/sites/all/themes/JBW/css/festival.css
@@ -34,13 +34,13 @@
 }
 
 .page-node .node_left_part,
-.page-news .node_left_part{
+.page-news #region-content .node_left_part{
     width: 150px;
     float: left;
 }
 
 .page-node .node_right_part,
-.page-news .node_right_part{
+.page-news #region-content .node_right_part{
     width: 400px;
     float: right;
 }
@@ -54,7 +54,7 @@
 
 .page-node .node_left_part /*#festival-content*/ .views-field-field-festival-image img,
 .page-node .node_left_part /*#festival-content*/ .views-field-field-event-image img,
-.page-news .node_left_part .views-field-field-news-image img{
+.page-news #region-content .node_left_part .views-field-field-news-image img{
     margin: 45px 0 10px 15px;
     
 }
@@ -65,15 +65,21 @@
 
 /*festivale text*/
 .page-node .node_right_part .views-field-body,
-.page-news .node_right_part .views-field-body{/*p*/
+.page-news #region-content .node_right_part .views-field-body{/*p*/
     float: right;
     margin: 20px 20px 15px 15px;
     text-align: left;
 }
 
+/*news title*/
+.page-news #region-content .node_right_part .views-field-title a{
+    text-decoration: none;
+    color: black;
+}
+
 /*festivale title*/
 .page-node .views-field-title,
-.page-news .views-field-title{
+.page-news #region-content .views-field-title{
     margin: 45px 20px 5px 15px;
 }
 
@@ -98,7 +104,7 @@
 }
 
 .page-node .node_right_part .views-field-sharethis,
-.page-news .node_right_part .views-field-sharethis{
+.page-news #region-content .node_right_part .views-field-sharethis{
     /*position: absolute;*/
     float: right;
     margin-bottom: 5px;
@@ -177,7 +183,7 @@
 }
 
 /*----------------------------------border news-------------------------------*/
-.page-news #news-content{
+.page-news #region-content #news-content{
     clear: both;
     /*position: relative;*/
     display: block;
@@ -185,16 +191,10 @@
     /*border-bottom: 1px solid gray;*/
 }
 
-.page-news .node_right_part{
+.page-news #region-content .node_right_part{
     border-bottom: 1px solid gray;
 }
 
-.pane-node .views-row{
-    margin: 0;
-    padding: 0;
-    background-color: red;
-    z-index: 100;
-}
 /*
 .page-news .news-border-line{
     width: 550px;
@@ -210,4 +210,7 @@
 }*/
 
 
-
+/*---------------------------margin on basic page----------------------------*/
+.page-node article{
+    margin: 10px;
+}
