--- a/sites/all/themes/JBW/css/content.css
+++ b/sites/all/themes/JBW/css/content.css
@@ -52,9 +52,9 @@ ul.primary{
 }
 
 /*title of text on slider*/
-.page-home .festival-left-part .views-field-title{
+/*.page-home .festival-left-part .views-field-title{
     display: none;
-}
+}*/
 
 #region-content #page-title{
     /*display: none;*/
