breadcrumb fix sidebar block

--- a/sites/all/themes/JBW/css/content.css
+++ b/sites/all/themes/JBW/css/content.css
@@ -56,7 +56,7 @@ ul.primary{
     display: none;
 }*/
 
-#region-content #page-title{
+#region-content h1#page-title{
     /*display: none;*/
     margin: 0;
 }
