--- a/sites/all/themes/JBW/css/global.css
+++ b/sites/all/themes/JBW/css/global.css
@@ -197,11 +197,12 @@ body{
 #site-slogan .site-slogan{
     text-align: right;
     /*font-family: sans-serif;*/
-    font-size: 12px;
+    font-size: 16px;
     margin-left: 15px;
     margin-top: 3px;
     margin-bottom: 3px;
     font-style: italic;
+    color: #58595b;
 }
 
 /*-------------------------Share component---------------------------------*/
