--- a/sites/all/themes/JBW/css/sidebar.css
+++ b/sites/all/themes/JBW/css/sidebar.css
@@ -6,7 +6,8 @@
     margin-left: 15px;
 }*/
 
-#region-sidebar #scrollbarY  section{ /*.overview .block*/
+#region-sidebar #scrollbarY .block-litkicks-block-1,
+#region-sidebar #scrollbarY section{ /*.overview .block*/
     width: 370px;
     /*margin-top: 10px;*/
     position: relative;
@@ -24,30 +25,56 @@
 }
 
 #region-sidebar #scrollbarY  section .block-inner{
-    margin-left: 10px;
-    margin-right: 10px;
-    margin-bottom: 5px;
+    padding: 10px;
+}
+#region-sidebar #scrollbarY .block-litkicks-block-1 .block-inner{
+    padding: 10px 10px 2px 10px;
 }
 
 #region-sidebar #scrollbarY h2.block-title {
-    padding-top: 5px;
+    padding-top:0;
+    font-size: 15px;
+    font-weight: normal;
+    color: #333333;
+    line-height: 1em;
+    margin-bottom: 10px;
 }
-
+#region-sidebar #scrollbarY .block-litkicks-litkicksblock h2.block-title {
+    display: none;
+}
+#region-sidebar #scrollbarY h2.field-content {
+    line-height: 1em;
+    font-size: 15px;
+    font-weight: normal;
+    margin-bottom: 10px;
+    color: #333333;
+}
+#region-sidebar #scrollbarY .views-field-body{
+    color: #333333;
+    font-size: 11px;
+    font-style: italic;
+    line-height: 1.1em;
+    margin-bottom: 10px;
+}
 #region-sidebar #scrollbarY .views-field-sharethis{
     float: right;
-    margin-bottom: 5px;
     margin-right: 5px;
     /*width: 110px;*/
     z-index: 2;
 }
 
-#region-sidebar #scrollbarY .views-row .node_left_part{
-    width: 150px;
+#region-sidebar #scrollbarY .views-field-field-news-image{
+    float: left;
+    margin-right: 10px;
+}
+
+#region-sidebar #scrollbarY .views-row .node-left-part{
+    width: 215px;
     float: left;
 }
 
-#region-sidebar #scrollbarY .views-row .node_right_part{
-    width: 200px;
+#region-sidebar #scrollbarY .views-row .node-right-part{
+    width: 125px;
     float: right;
 }
 
