--- a/sites/all/themes/JBW/css/festival.css
+++ b/sites/all/themes/JBW/css/festival.css
@@ -50,7 +50,7 @@
     float: left;
 }
 
-.page-node .node_right_part,
+.page-node #region-content .node_right_part,
 .page-news #region-content .node_right_part{
     width: 400px;
     float: right;
