--- a/sites/all/themes/JBW/css/festival.css
+++ b/sites/all/themes/JBW/css/festival.css
@@ -83,9 +83,11 @@
 }
 
 /*news title*/
-.page-news #region-content .node_right_part .views-field-title a{
+.page-news #region-content .node_right_part .views-field-title a,
+.page-node #region-content .node_right_part .views-field-title a{
     text-decoration: none;
     color: black;
+    font-size: 12px;
 }
 
 /*festivale title*/
@@ -103,6 +105,16 @@
 .page-news .views-field-field-author,
 .page-news .views-field-field-publication-date{
     margin: 0 20px 5px 15px;
+    font-family: georgia;
+    font-style: italic;
+    font-size: 10px;
+}
+
+.page-node .buy-link-cart a{
+    text-decoration: none;
+    font-style: italic;
+    color: #77c24e;
+    font-size: 12px;
 }
 
 /*.page-node .buy-link-cart{
